# rust_learning

project1/: .env  Cargo.toml
project1/migrations/: 20250209130628_create_subscriptions_table.sql
project1/scripts/: init_db.sh
project1/src/: configuration.rs  lib.rs  main.rs  startup.rs
project1/src/routes/: mod.rs  subscriptions.rs
project1/tests/: health_check.rs
