[package]
name = "project1"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "project1"

[dev-dependencies]
reqwest = "0.12"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
